--- a/src/app/static/pvc.html
+++ b/src/app/static/pvc.html
@@ -18,11 +18,11 @@
   </head>
   <body>
     <header>
+      <a id="back-ns" href="#" class="button">⬅ Back</a>
       <h1 id="title">PVC Browser</h1>
-      <div class="toolbar">
-        <a id="back-ns" href="#" class="button">Back to namespace</a>
-        <a href="#" class="button" data-role="theme-toggle" title="Theme">🌓</a>
-        <a id="refresh" href="#" class="button">Refresh</a>
+      <a id="refresh" href="#" class="button">🔄 Refresh</a>
+      <div class="actions">
+        <a href="#" class="button" data-role="theme-toggle" title="Theme">🌓 Theme</a>
       </div>
     </header>
     <main>
