--- a/src/app/static/index.html
+++ b/src/app/static/index.html
@@ -12,7 +12,7 @@
       <h1>web-k8s-backupper</h1>
       <p class="subtitle">Browse namespaces, download manifests, and PVC snapshots</p>
       <div class="actions">
-        <a href="#" class="button" data-role="theme-toggle">Theme</a>
+        <a href="#" class="button" data-role="theme-toggle">🌓 Theme</a>
       </div>
     </header>
     <main>
