--- a/src/app/static/namespace.html
+++ b/src/app/static/namespace.html
@@ -19,11 +19,11 @@
     </header>
     <main>
       <section>
-        <h2>PersistentVolumeClaims</h2>
+        <h2>💾 PersistentVolumeClaims</h2>
         <div id="pvcs" class="cards"></div>
       </section>
       <section>
-        <h2>Objects</h2>
+        <h2>🗂️ Objects</h2>
         <div id="objects" class="grid"></div>
       </section>
     </main>
