--- a/src/app/static/index.html
+++ b/src/app/static/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
       <section>
-        <h2>Namespaces</h2>
+        <h2>🗺️ Namespaces</h2>
         <div id="ns-list" class="cards"></div>
       </section>
     </main>
