--- a/src/app/static/namespace.html
+++ b/src/app/static/namespace.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <nav class="breadcrumbs"><a href="/">🗺️ Namespaces</a> <span>›</span> <span id="crumb-ns"></span></nav>
+      <nav class="breadcrumbs"><a href="/">🗺️ Namespaces</a> <span class="sep">›</span> <span id="crumb-ns" class="current"></span></nav>
       <h1 id="ns-title"></h1>
       <a id="view-manifests" class="button" href="#" target="_blank">📄 View Manifests</a>
       <a id="dl-manifests" class="button" href="#">⬇️ Download Manifests</a>
