--- a/src/app/static/pvc.html
+++ b/src/app/static/pvc.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header>
-      <nav class="breadcrumbs"><a href="/">🗺️ Namespaces</a> <span>›</span> <a id="crumb-ns" href="#">🧭 </a> <span>›</span> <span id="crumb-pvc">💾 </span></nav>
+      <nav class="breadcrumbs"><a href="/">🗺️ Namespaces</a> <span class="sep">›</span> <a id="crumb-ns" href="#">🧭 </a> <span class="sep">›</span> <span id="crumb-pvc" class="current">💾 </span></nav>
       <h1 id="title">PVC Browser</h1>
       <a id="refresh" href="#" class="button">🔄 Refresh</a>
       <div class="actions">
